munge/tests/ui/rest_patterns_ref_only.stderr
error[E0271]: type mismatch resolving `<MaybeUninit<Struct> as Destructure>::Destructuring == Ref`
  --> tests/ui/rest_patterns_ref_only.rs:14:28
   |
14 |     munge!(let Struct { a, .. } = mu);
   |     -----------------------^---------
   |     |                      |
   |     |                      expected `Ref`, found `Value`
   |     required by a bound introduced by this call
   |
note: required by a bound in `rest_patterns_are_ref_destructuring_only`
  --> src/lib.rs
   |
   |     T: Destructure<Destructuring = Ref>,
   |                    ^^^^^^^^^^^^^^^^^^^ required by this bound in `rest_patterns_are_ref_destructuring_only`

error[E0271]: type mismatch resolving `<MaybeUninit<Tuple> as Destructure>::Destructuring == Ref`
  --> tests/ui/rest_patterns_ref_only.rs:20:25
   |
20 |     munge!(let Tuple(a, ..) = mu);
   |     --------------------^--------
   |     |                   |
   |     |                   expected `Ref`, found `Value`
   |     required by a bound introduced by this call
   |
note: required by a bound in `rest_patterns_are_ref_destructuring_only`
  --> src/lib.rs
   |
   |     T: Destructure<Destructuring = Ref>,
   |                    ^^^^^^^^^^^^^^^^^^^ required by this bound in `rest_patterns_are_ref_destructuring_only`
